[package]
name = "minecraft-protocol"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
bytebuffer = "2.2.0"
fastnbt = "2.5.0"
once_cell = "1.19.0"
serde = "1.0.198"
tokio = {version = "1.37.0", features = ["full"]}

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
